--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.5.1",
     "typescript": "^5.9.3",
+  "@types/node": "^20.9.2",
     "vite": "^6.0.5",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.1"
