--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
   "lint:script": "eslint --ext .ts,.vue src/",
   "lint:fix": "eslint --ext .ts,.vue src/ --fix"
+  ,"lint:ci": "vue-tsc --noEmit && eslint --ext .ts,.vue src/ --max-warnings=0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
