--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-  "lint:script": "eslint --ext .ts,.vue src/",
-  "lint:fix": "eslint --ext .ts,.vue src/ --fix"
-  ,"lint:ci": "vue-tsc --noEmit && eslint --ext .ts,.vue src/ --max-warnings=0"
+    "lint:script": "eslint --ext .ts,.vue src/",
+    "lint:fix": "eslint --ext .ts,.vue src/ --fix",
+    "lint:ci": "vue-tsc --noEmit && eslint --ext .ts,.vue src/ --max-warnings=0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -23,10 +23,10 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-typescript": "^14.6.0",
     "eslint": "^9.38.0",
-  "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.5.1",
     "typescript": "^5.9.3",
-  "@types/node": "^20.9.2",
+    "@types/node": "^20.9.2",
     "vite": "^6.0.5",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.1"
