--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   // ESLint handles formatting.
   "prettier.enable": false,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "eslint.format.enable": true,
   "eslint.options": {
     "ignorePath": ".gitignore"
   },
@@ -26,14 +29,50 @@
   ],
   // Suppress stylistic errors, but still autofix them.
   "eslint.rules.customizations": [
-    { "rule": "@stylistic/*", "severity": "warn", "fixable": true },
-    { "rule": "*-indent", "severity": "warn", "fixable": true },
-    { "rule": "*-spacing", "severity": "warn", "fixable": true },
-    { "rule": "*-spaces", "severity": "warn", "fixable": true },
-    { "rule": "*-order", "severity": "warn", "fixable": true },
-    { "rule": "*-dangle", "severity": "warn", "fixable": true },
-    { "rule": "*-newline", "severity": "warn", "fixable": true },
-    { "rule": "*quotes", "severity": "warn", "fixable": true },
-    { "rule": "*semi", "severity": "warn", "fixable": true }
-  ],  
+    {
+      "rule": "@stylistic/*",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-indent",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-spacing",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-spaces",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-order",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-dangle",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*-newline",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*quotes",
+      "severity": "warn",
+      "fixable": true
+    },
+    {
+      "rule": "*semi",
+      "severity": "warn",
+      "fixable": true
+    }
+  ],
 }
