--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint:script": "eslint --ext .ts,.vue src/",
+    "lint": "eslint --ext .ts,.vue src/",
     "lint:fix": "eslint --ext .ts,.vue src/ --fix",
     "lint:ci": "vue-tsc --noEmit && eslint --ext .ts,.vue src/ --max-warnings=0"
   },
