--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@vueuse/core": "^14.0.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^20.9.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -26,7 +28,6 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.5.1",
     "typescript": "^5.9.3",
-    "@types/node": "^20.9.2",
     "vite": "^6.0.5",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.1"
